<resources>
    <string name="app_name">MyFinances</string>
    <string name="mis_finanzas">Mis Finanzas</string>

    <string name="bienvenido">Bienvenido</string>

    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="clave">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="olvidaste_tu_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="crear_cuenta">Crear Cuenta</string>

    /** TIPOS DE DOCUMENTO **/
    <string-array name="listOfDocumentTypes">
        <item>CC</item>
        <item>TI</item>
        <item>NIP</item>
    </string-array>

    <string name="datos_basicos">Datos Básicos</string>
    <string name="datos_de_usuario">Datos de usuario</string>
    <string name="tipo_de_documento">Tipo de documento</string>
    <string name="numero_de_documento">Número de documento</string>
    <string name="primer_nombre">Primer nombre</string>
    <string name="primer_apellido">Primer apellido</string>

    <string name="alerta_username_login">Debe digitar el nombre de usuario o número de documento</string>
    <string name="alerta_clave">Debe digitar la contraseña</string>

    <string name="correo_electronico">Correo electrónico</string>
    <string name="logo">logo</string>
</resources>