<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <ImageView
        android:id="@+id/imageView_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_finance"
        android:contentDescription="@string/logo"

        app:layout_constraintBottom_toTopOf="@id/layout_username"
        app:layout_constraintEnd_toEndOf="@id/layout_username"
        app:layout_constraintStart_toStartOf="@id/layout_username"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="32sp"
        android:text="@string/mis_finanzas"

        app:layout_constraintEnd_toEndOf="@id/imageView_login"
        app:layout_constraintStart_toStartOf="@id/imageView_login"
        app:layout_constraintTop_toBottomOf="@id/imageView_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:hint="@string/nombre_de_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/comfortaa_light">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:hint="@string/clave"
        app:layout_constraintEnd_toEndOf="@id/layout_username"
        app:layout_constraintStart_toStartOf="@id/layout_username"
        app:layout_constraintTop_toBottomOf="@id/layout_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/comfortaa_light"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:textSize="16sp"
        android:text="@string/iniciar_sesion"
        android:padding="12dp"
        android:textAllCaps="false"

        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/layout_password"
        app:layout_constraintStart_toStartOf="@id/layout_password"
        app:layout_constraintTop_toBottomOf="@id/layout_password" />

    <TextView
        android:id="@+id/textView_forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_light"
        android:textSize="16sp"
        android:text="@string/olvidaste_tu_contraseña"

        app:layout_constraintEnd_toEndOf="@id/button_login"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <TextView
        android:id="@+id/textView_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_light"
        android:textSize="16sp"
        android:text="@string/no_tienes_una_cuenta"

        app:layout_constraintStart_toStartOf="@id/textView_forgotten_password"
        app:layout_constraintTop_toBottomOf="@id/textView_forgotten_password"
        app:layout_constraintEnd_toEndOf="@id/textView_forgotten_password"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textView_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/blue_dark"
        android:textSize="16sp"
        android:text="@string/crear_cuenta"

        app:layout_constraintStart_toStartOf="@id/textView_dont_have_account"
        app:layout_constraintTop_toBottomOf="@id/textView_dont_have_account"
        app:layout_constraintEnd_toEndOf="@id/textView_dont_have_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>